# crappy-bird

./: .gitignore  CMakeLists.txt  README.md
cocos2d/: AUTHORS  CHANGELOG  README.md
cocos2d/cmake/Modules/: CocosSelectModule.cmake
cocos2d/cocos/: CMakeLists.txt
cocos2d/cocos/platform/win8.1-universal/: Cocos2dRenderer.cpp
cocos2d/docs/: RELEASE_ENGINEERING.md
cocos2d/licenses/: LICENSE_cocosdenshion.txt
cocos2d/tools/simulator/frameworks/runtime-src/proj.android/jni/hellolua/: main.cpp
cocos2d/tools/simulator/frameworks/runtime-src/proj.win32/: SimulatorWin.h
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/jni/: Android.mk
proj.android/app/jni/hellocpp/: main.cpp
proj.ios_mac/CrappyBird.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist  main.cpp
proj.win32/: CrappyBird.sln  main.cpp
src/: AppDelegate.cpp  Utils.cpp
src/_include/: AppDelegate.h  Background.h  BackgroundLayer.h  Box2dPhysics.h  Box2dPhysicsScene.h  CustomPhysics.h  CustomPhysicsScene.h  DebugLayer.h  GameSettings.h  Ground.h  GroundLayer.h  MainScene.h  Obstacles.h  ObstaclesLayer.h  Physics.h  Player.h  PlayerLayer.h  Utils.h  ViewUpdateContract.h  Views.h
src/core/: GameSettings.cpp  Ground.cpp  Obstacles.cpp  Player.cpp  ViewUpdateContract.cpp
src/physics/: Box2dPhysics.cpp  CustomPhysics.cpp
src/scenes/: Box2dPhysicsScene.cpp  CustomPhysicsScene.cpp  MainScene.cpp
src/view/: BackgroundLayer.cpp  DebugLayer.cpp  GroundLayer.cpp  ObstaclesLayer.cpp  PlayerLayer.cpp
